generic class for service